Created Card components Added static resource folder

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -115,3 +115,11 @@ section {
       0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 }
+
+.pull-left {
+  margin-right: auto;
+}
+
+.pull-right {
+  margin-left: auto;
+}
