--- a/src/scss/base/_index.scss
+++ b/src/scss/base/_index.scss
@@ -4,9 +4,17 @@
 
 // Base styling
 @import "global";
-@import "animations";
-@import "grid";
-@import "states";
 @import "typography";
 @import "icons";
 @import "tables";
+
+@import "animations";
+@import "colors";
+@import "text";
+
+@import "grid";
+@import "flex";
+@import "layout";
+@import "spacers";
+
+@import "states";
