--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -3,4 +3,7 @@
 @import "cards";
 @import "buttons";
 @import "banners";
+@import "inputs";
 @import "parallax-stars";
+@import "user-profile";
+@import "media-objects";
