--- a/src/scss/components/_parallax-stars.scss
+++ b/src/scss/components/_parallax-stars.scss
@@ -25,12 +25,15 @@ $shadows-big: multiple-box-shadow(100);
   height: 100vh;
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
   overflow: hidden;
+  margin-bottom: 4rem;
 
   .title {
     position: absolute;
     top: 50%;
     left: 0;
     right: 0;
+
+    user-select: none;
 
     color: #fff;
     text-align: center;
