--- a/src/scss/base/variables/_maps.scss
+++ b/src/scss/base/variables/_maps.scss
@@ -30,6 +30,9 @@ $z-indexes: (
     footer: 80,
     sidenav: 100
   ),
+  network: (
+    strip: 85
+  ),
   slider: (
     arrows: 40,
     base: 30,
