--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -2,8 +2,12 @@
 @import "footer";
 @import "cards";
 @import "buttons";
+@import "tile";
 @import "banners";
 @import "inputs";
+@import "collapsible";
 @import "parallax-stars";
 @import "user-profile";
 @import "media-objects";
+@import "network-status";
+@import "section-title";
