--- a/src/scss/base/_animations.scss
+++ b/src/scss/base/_animations.scss
@@ -7,6 +7,33 @@
   }
 }
 
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 currentColor;
+    box-shadow: 0 0 0 0 currentColor;
+  }
+  70% {
+    -moz-box-shadow: 0 0 0 5px rgba(204, 169, 44, 0);
+    box-shadow: 0 0 0 5px rgba(204, 169, 44, 0);
+  }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+    box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+  }
+}
+
+.pulse {
+  display: block;
+  background: currentColor;
+  cursor: pointer;
+  box-shadow: 0 0 0 currentColor;
+  animation: pulse 2s infinite;
+
+  &:hover {
+    animation: none;
+  }
+}
+
 .orbit {
   position: relative;
 
@@ -18,7 +45,7 @@
     transform-style: preserve-3d;
     transform: translateZ(300px);
 
-    border: .05rem solid rgba($gray-600, 0.05);
+    border: 0.05rem solid rgba($gray-600, 0.05);
     border-radius: 50%;
     display: block;
     left: 50%;
@@ -47,7 +74,7 @@
     transform-style: preserve-3d;
     transform: translateZ(300px);
 
-    border: .05rem solid rgba($gray-600, 0.05);
+    border: 0.05rem solid rgba($gray-600, 0.05);
     border-radius: 50%;
     display: block;
     left: 50%;
@@ -76,7 +103,7 @@
     transform-style: preserve-3d;
     transform: translateZ(300px);
 
-    border: .05rem solid rgba($gray-600, 0.05);
+    border: 0.05rem solid rgba($gray-600, 0.05);
     border-radius: 50%;
     display: block;
     left: 50%;
