--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,8 +1,9 @@
 .footer {
   width: 100%;
-  background-color: #5f5f5f;
+  background-color: $secondary-color;
   color: #fff;
   position: relative;
+  margin-top: 4rem;
 
   z-index: z-index(navigation, footer);
 
@@ -35,7 +36,7 @@
   .footer-copyright {
     font-family: $font-family-secondary;
     height: 45px;
-    background-color: #3c3c3c;
+    background-color: darken($color: $secondary-color, $amount: 5);
     display: flex;
     align-items: center;
     justify-content: center;
