--- a/src/scss/components/_banners.scss
+++ b/src/scss/components/_banners.scss
@@ -12,6 +12,7 @@
 
   margin-left: -1rem;
   margin-right: -1rem;
+  margin-bottom: 3rem;
 
   @include sm() {
     margin-left: 0;
@@ -69,6 +70,16 @@
     line-height: 130%;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     color: whitesmoke;
+  }
+  
+  .banner-subtitle {
+    display: block;
+    font-size: $font-size-md;
+    font-family: $font-family-base;
+    line-height: 130%;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    color: whitesmoke;
+    margin: 0;
   }
 
   @include md() {
