--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,13 +1,20 @@
-@import "loading";
-@import "footer";
-@import "cards";
-@import "buttons";
-@import "tile";
+@import "badges";
 @import "banners";
-@import "inputs";
+@import "buttons";
+@import "cards";
 @import "collapsible";
-@import "parallax-stars";
-@import "user-profile";
+@import "footer";
+@import "inputs";
+@import "loading";
 @import "media-objects";
 @import "network-status";
+@import "parallax-stars";
 @import "section-title";
+@import "user-profile";
+@import "tile";
+@import "chat-head";
+@import "chat-message";
+@import "back-to-top";
+@import "sidenav";
+@import "tabs";
+@import "mega-sidenav";
