--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -1,6 +1,3 @@
-:root {
-  --nav-size: 60px;
-}
 
 html,
 body {
@@ -66,6 +63,26 @@ details {
 
 section {
   padding: 1rem 0;
+}
+
+img {
+  &.responsive {
+    max-width: 100%;
+    height: auto;
+  }
+
+  &.framed {
+    padding: 1rem;
+    border: 1px solid white;
+    border-radius: 8px;
+    box-sizing: border-box;
+    background-color: white;
+  }
+
+  &.cover {
+    object-fit: cover;
+    object-position: center;
+  }
 }
 
 // Z-levels
