--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -3,18 +3,19 @@
   grid-template-columns: 1fr auto;
   column-gap: 5px;
 
-  .input, input {
+  .input,
+  input {
     margin: 0;
   }
 }
 
 .button-group {
   display: grid;
-  grid-gap: $grid-gutter;
-  grid-template-columns: repeat(auto-fill, minmax(150px, auto));
+  grid-gap: $grid-gutter / 2;
+  grid-template-columns: repeat(auto-fill, minmax(120px, auto));
 
-  .fill {
-    grid-template-columns: repeat(auto-fit, minmax(150px, auto));
+  &.fill {
+    grid-template-columns: repeat(auto-fit, minmax(120px, auto));
   }
 }
 
@@ -30,5 +31,30 @@
   }
   &.no-padding-top {
     padding-top: 0;
+  }
+}
+
+.card-list {
+  display: flex;
+  padding: 0 3rem;
+  overflow-x: scroll;
+  .card {
+    margin: 0;
+    width: 350px;
+    min-width: 350px;
+    transition: all .2s ease-in-out;
+
+    &:not(:first-child) {
+      margin-left: -130px;
+
+    }
+
+    &:hover {
+      transform: translateY(-1rem);
+
+      &~.card {
+        transform: translateX(130px);
+      }
+    }
   }
 }
