--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -69,7 +69,7 @@ h6 {
 p {
   // color: $text-color;
   font-family: $font-family-base;
-  font-size: 1rem;
+  font-size: $base-font-size;
   line-height: $line-height-base;
   // max-width: 33em;
   margin: 1em 0;
